--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,8 +22,8 @@
 <body>
     <header class="py-3 bg-secondary text-white">
     <div class="container d-flex flex-wrap align-items-center justify-content-between">
-        <a href="{{ url_for('api.home') }}" class="d-flex align-items-center text-white text-decoration-none">
-            <span class="fw-bold fs-4">Farmers Point</span>
+        <a href="#" class="d-flex align-items-center text-white text-decoration-none">
+            <h1 class="fw-bold fs-4 mb-0">Farmers Point</h1>
         </a>
 
         <ul class="nav col-auto mb-2 mb-lg-0">
@@ -55,6 +55,8 @@
         </ul>
     </div>
 </header>
+<hr>
+
 
 <main>
     {% block content %}{% endblock %}
@@ -63,7 +65,7 @@
 <footer class="container py-5">
     <div class="row">
         <div class="col-12 col-md">
-            <small class="d-block mb-3 text-muted">&copy; 2017–2022</small>
+            <small class="d-block mb-3 text-muted">&copy; 2024</small>
         </div>
         <div class="col-6 col-md">
             <h5>Features</h5>
